--- a/app/blocks/benefits/benefits.styl
+++ b/app/blocks/benefits/benefits.styl
@@ -33,7 +33,7 @@
 		// padding-top: 8px;
 		display: flex;
 		align-items: center;
-		max-width: 250px;
+		max-width: 300px;
 
 		+below($phones) {
 			line-height: 1.75;
@@ -41,7 +41,7 @@
 	}
 
 	&__text {
-		max-width: 285px;
+		max-width: 350px;
 		max-height: 74px;
 		text();
 
@@ -84,7 +84,7 @@
 		display: flex;
 		align-items: center;
 		width: 49%;
-		max-width: 540px;
+		max-width: 600px;
 		un-block();
 
 		+below($phones) {
