--- a/app/scripts/components/CityExplorer/index.styl
+++ b/app/scripts/components/CityExplorer/index.styl
@@ -143,7 +143,7 @@
 	&__description {
 		text();
 		width: 48%;
-		max-width: 460px;
+		max-width: 560px;
 		order: 1;
 
 		p {
@@ -303,8 +303,9 @@
 
 			.slick-slide {
 				padding: 0 !important;
-				width: 32% !important;
-				max-width: 314px;
+				width: calc(33.333333% - 20px) !important;
+				max-width: 350px;
+				// max-width: 314px;
 			}
 
 			.slick-slider {
