--- a/app/styles/base/5.common.styl
+++ b/app/styles/base/5.common.styl
@@ -1,7 +1,7 @@
 .wrap {
 	margin: 0 auto;
 	width: 100%;
-	max-width 1170px;
+	max-width 1280px;
 	padding: 0 15px;
 
 	+below($phones) {
